syntax = "proto3";
package example;

message ExampleRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message ExampleReply {
    // Reply contains the greeting message
    string message = 1;
}

service Greeter {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHello (ExampleRequest) returns (ExampleReply);
}
